# iBeto

./: .gitignore  README.md  dirs.sh  pyproject.toml  struct.sh
configs/: ibeto.toml
docs/: HANDOFF.md  RESUME_PROMPT.md
docs/research/: chatGPT-proposal.txt
experiments/: thinking_probe.py  vision_probe.py
experiments/backend_benchmark/: test_lmstudio.py
ibeto/: __main__.py
ibeto/audio/: __init__.py  mic.py  stt.py  tts.py  xtts_worker.py
ibeto/channels/: telegram.py
ibeto/cli/: __init__.py
ibeto/config/: __init__.py
ibeto/core/: session.py
ibeto/llm/: lmstudio.py  manager.py
ibeto/memory/: __init__.py
ibeto/prompts/: __init__.py  assistant.md
ibeto/vision/: __init__.py  capture.py
scripts/: bench_correctness.py  bench_models.py  bench_multilingual.py  ibeto  measure_tts.py  setup.sh
tests/: test_smoke.py
