[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ibeto"
version = "0.2.0"
description = "Local-first realtime conversational AI companion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.44.0",
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "kokoro-onnx>=0.4.0",  # neural streaming TTS (no torch); voice mode only
    "piper-tts>=1.2.0",  # neural TTS for languages Kokoro lacks (e.g. Arabic, German)
    "lingua-language-detector>=2.0.0",  # tell Latin languages apart (de/fr/es/it/pt/en)
]

# XTTS-v2 (tts_engine = "xtts") cannot share this env: coqui-tts pins numpy<2
# while the base needs numpy>=2. It runs in an isolated `uv run --no-project`
# worker instead (see ibeto/audio/xtts_worker.py); no deps are added here.

[project.scripts]
ibeto = "ibeto.cli:main"

[dependency-groups]
dev = [
    "ipython",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["ibeto"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
